added basic styling and responsiveness for several screen sizes

--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
 </head>
 
 <body>
-   <div class="backdrop"></div>
+  <div class="backdrop"></div>
   <header>
-    <div class="img"></div>
+    <div class="img">
+      <div class="name">Your Name Here</div> 
+    </div>
     <div class="about">
+      <div class="top">
       <h1>About Me</h1>
-      <div class="text">ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
+      <div class="text">ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+      </div>
+      <div class="bottom">
+        <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+        <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" />
+        <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg" />
+        
+      </div>
     </div>
   </header>
 
@@ -26,30 +38,30 @@
     <h2>My Work</h2>
     <div class="gridContainer">
       <div class="cell one">
-         <div class="projectTitle"> screenshot of project</div> 
+        <div class="projectTitle"> screenshot of project</div>
 
-         <div class="projectCard"></div>
+        <div class="projectCard"></div>
 
       </div>
       <div class="cell two">
-         <div class="projectTitle"> screenshot of project</div> 
-         <div class="projectCard"></div>
+        <div class="projectTitle"> screenshot of project</div>
+        <div class="projectCard"></div>
       </div>
       <div class="cell three">
-         <div class="projectTitle"> screenshot of project</div> 
-         <div class="projectCard"></div>
+        <div class="projectTitle"> screenshot of project</div>
+        <div class="projectCard"></div>
       </div>
       <div class="cell four">
-         <div class="projectTitle"> screenshot of project</div> 
-         <div class="projectCard"></div>
+        <div class="projectTitle"> screenshot of project</div>
+        <div class="projectCard"></div>
       </div>
       <div class="cell five">
-         <div class="projectTitle"> screenshot of project</div> 
-         <div class="projectCard"></div>
+        <div class="projectTitle"> screenshot of project</div>
+        <div class="projectCard"></div>
       </div>
       <div class="cell six">
-         <div class="projectTitle"> screenshot of project</div> 
-         <div class="projectCard"></div>
+        <div class="projectTitle"> screenshot of project</div>
+        <div class="projectCard"></div>
       </div>
     </div>
 
@@ -58,20 +70,20 @@
   <footer>
     <div class="info">
       <h3>Contact Me</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-      Id faucibus nisl tincidunt eget nullam non nisi. Et pharetra pharetra 
-      massa massa.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Id faucibus nisl tincidunt eget nullam non nisi. Et pharetra pharetra
+        massa massa.</p>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, </p>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, </p>
 
     </div>
-      <div class="img2"></div>
+    <div class="img2"></div>
 
   </footer>
 
